base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flisol-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/part-of: flisol-demo
      app.openshift.io/runtime: quarkus
      deployment: flisol-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: flisol-demo
        app.openshift.io/runtime: quarkus
        deployment: flisol-demo
    spec:
      containers:
      - env:
        - name: JAVA_APP_JAR
          value: /deployments/quarkus-run.jar
        - name: JAVA_OPTS
          value: -Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        image: " "
        imagePullPolicy: IfNotPresent
        name: flisol-demo
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 400Mi
          requests:
            cpu: 100m
            memory: 200Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
